v4l2src: fix bufferpool leak in decide_allocation()

gst_query_parse_nth_allocation_pool() ref the pool it returns and
gst_query_set_nth_allocation_pool()/gst_query_add_allocation_pool are
transfert none.
So when we replace it by our own pool in DMA/MMAP/USERPTR cases, we
must unref the one given by gst_query_parse_nth_allocation_pool().
In all cases, pool should be unref at the end so to make it clear, we
also ref our own pool when using it.

https://bugzilla.gnome.org/show_bug.cgi?id=728490